This is a working version

--- a/httpTorBalancer/rotating-tor-proxies.cfg
+++ b/httpTorBalancer/rotating-tor-proxies.cfg
@@ -9,13 +9,13 @@ defaults
         timeout server 50000ms
 
 frontend rotatingproxies
-        bind *:3128
+        bind localhost:3128
         default_backend tors
         option http_proxy
 
 backend tors
         option http_proxy
-        server tor1 localhost:31000
+        server tor0 localhost:31000
         server tor1 localhost:31001
         server tor2 localhost:31002
         server tor3 localhost:31003
