--- a/httpTorBalancer/rotating-tor-proxies.cfg
+++ b/httpTorBalancer/rotating-tor-proxies.cfg
@@ -24,4 +24,4 @@ backend tors
         server tor7 localhost:31007
         server tor8 localhost:31008
         server tor9 localhost:31009
-        balance leastconn
+        balance uri len 16
