--- a/httpTorBalancer/rotating-tor-proxies.cfg
+++ b/httpTorBalancer/rotating-tor-proxies.cfg
@@ -13,6 +13,15 @@ frontend rotatingproxies
         default_backend tors
         mode tcp
 
+listen stats
+	bind localhost:5000
+	mode http
+	stats enable
+	stats hide-version
+	stats realm Haproxy\ Statistics
+	stats uri /stats
+	stats auth username:password
+
 backend tors
         server tor0 localhost:31000
         server tor1 localhost:31001
